- Pin Location in Heraklion - Alignment fixes in Phone-App

--- a/frontend/src/app/pages/phone-app/orders/order-details/order-details.component.scss
+++ b/frontend/src/app/pages/phone-app/orders/order-details/order-details.component.scss
@@ -1,113 +1,113 @@
-.main-container{
-     .orderDetails{
-            flex-wrap: nowrap;
-            font-size: 16px;
-            color: black;
+.main-container {
+  .orderDetails {
+    flex-wrap: nowrap;
+    font-size: 16px;
+    color: black;
 
-            font-family: 'Koulen', sans-serif;
-            font-style: normal;
+    font-family: 'Koulen', sans-serif;
+    font-style: normal;
 
-            .box{
-                box-sizing: border-box;
+    .box {
+      box-sizing: border-box;
 
-                display: flex;
-                position: relative;
+      display: flex;
+      position: relative;
 
 
-                width: 343px;
-                height: 43px;
+      width: 343px;
+      height: 43px;
 
-                margin-top: 10px;
-                left: 6px;
+      margin-top: 10px;
+      left: 6px;
 
-                background: #FFFFFF;
-                border: 1px solid #ECE9E9;
-                border-radius: 3px;
-                filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+      background: #FFFFFF;
+      border: 1px solid #ECE9E9;
+      border-radius: 3px;
+      filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 
-                .id{
-                    position: relative;
-                    left: 2px;
-                    padding-top: 2.5%;
-                }
+      .id {
+        position: relative;
+        left: 2px;
+        padding-top: 2.5%;
+      }
 
-                .address{
-                    position: relative;
-                    text-align: center;
-                    width: 58%;
-                    left: 10px;
-                    padding-top: 2.5%;
-                }
+      .address {
+        position: relative;
+        text-align: left;
+        width: 58%;
+        left: 19px;
+        padding-top: 2.5%;
+      }
 
-                .volume{
-                    position: relative;
-                    text-align: center;
-                    width: 10%;
-                    left: 22px;
-                    padding-top: 2.5%;
+      .volume {
+        position: relative;
+        text-align: left;
+        width: 10%;
+        left: 18px;
+        padding-top: 2.5%;
 
-                }
+      }
 
-                .dist{
-                    position: relative;
-                    text-align: center;
-                    width: 15%;
-                    left: 38px;
-                    padding-top: 2.5%;
+      .dist {
+        position: relative;
+        text-align: center;
+        width: 15%;
+        left: 38px;
+        padding-top: 2.5%;
 
-                }
-            }
-
-            .green{
-                background-color: #8EFC9F;
-            }
-
-            .red{
-                background-color: #FE3434;
-            }
-        }
-
-            .bottom-buttons{
-        .clear{
-            position: absolute;
-            left: 6.15%;
-            right: 56.67%;
-            top: 88.74%;
-            bottom: 3.32%;
-
-            filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-            background: #B1C8DD;
-            border-radius: 21px;
-        }
-
-        .start{
-            position: absolute;
-            left: 57.18%;
-            right: 5.64%;
-            top: 88.74%;
-            bottom: 3.32%;
-
-            filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-            background: #6ECF7D;
-            border-radius: 21px;
-
-            p{
-                color: black;
-            }
-        }
-
-        p{
-            display: flex;
-            line-height: 33px;
-            align-items: center;
-            height: 67px;
-            padding-left: 37px;
-
-            font-family: 'Koulen', sans-serif;
-            font-style: normal;
-            font-size: 18px;
-            color: #FBFBFB;
-
-        }
+      }
     }
+
+    .green {
+      background-color: #8EFC9F;
+    }
+
+    .red {
+      background-color: #FE3434;
+    }
+  }
+
+  .bottom-buttons {
+    .clear {
+      position: absolute;
+      left: 6.15%;
+      right: 56.67%;
+      top: 88.74%;
+      bottom: 3.32%;
+
+      filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+      background: #B1C8DD;
+      border-radius: 21px;
+    }
+
+    .start {
+      position: absolute;
+      left: 57.18%;
+      right: 5.64%;
+      top: 88.74%;
+      bottom: 3.32%;
+
+      filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+      background: #6ECF7D;
+      border-radius: 21px;
+
+      p {
+        color: black;
+      }
+    }
+
+    p {
+      display: flex;
+      line-height: 33px;
+      align-items: center;
+      height: 67px;
+      padding-left: 37px;
+
+      font-family: 'Koulen', sans-serif;
+      font-style: normal;
+      font-size: 18px;
+      color: #FBFBFB;
+
+    }
+  }
 }
