--- a/frontend/src/app/pages/phone-app/orders/orders.component.scss
+++ b/frontend/src/app/pages/phone-app/orders/orders.component.scss
@@ -95,7 +95,7 @@
           height: 10%;
           font-family: 'Koulen', sans-serif;
           font-style: normal;
-          padding-top: 13%;
+          padding-top: 13.5%;
 
           .orderDetails > div {
             width: 100px;
